# home-thermosthat

./: .gitmodules  README  README.md  USB_UART.sch  display_connector.sch  fp-info-cache  git-submit-patch.bash  home-thermostat-cache.lib  home-thermostat.sch  power_supply.sch  regulator_out.sch
firmware/: .gitignore  CMakeLists.txt  README.md  TODO.md  arm-none-eabi.cmake  cmake_bootstrap.bash  cmake_build.bash  debuggerconfig.gdb  firmware.kdev4  thermosthat-fw-config.cmake
firmware/.kdev4/: firmware.kdev4
firmware/.mcuxpressoide_packages_support/: crt_directory.xml  info.properties
firmware/.mcuxpressoide_packages_support/MK22FN512xxx12_support/: K2x_dir_part.xml  K2x_list.xml  MK22F51212_internal.xml  info.properties
firmware/.mcuxpressoide_packages_support/MKW41Z512xxx4_support/: KW4x_dir_part.xml  KW4x_list.xml  MKW41Z4_internal.xml  info.properties
firmware/CMSIS/: CMakeLists.txt
firmware/XCVR/: CMakeLists.txt
firmware/freertos/: CMakeLists.txt  FreeRTOSConfig.h
firmware/kw41_fsl_drivers/: CMakeLists.txt
firmware/kw41_startup/: MKW41Z512xxx4.ld  heap_init.c  startup_mkw41z4.c
firmware/openthread_freertos/: CMakeLists.txt  openthread-freertos.h  openthread_freertos.c  uart_lock.c  uart_lock.h
firmware/openthread_kw41_port/: CMakeLists.txt  alarm.c  arm-none-eabi.cmake  openthread-core-kw41z-config.h  radio.c  system.c  uart.c
firmware/tempsensor/: .cproject  .project  tempsensor.mex
firmware/tempsensor/board/: clock_config.c  clock_config.h  peripherals.c  pin_mux.c  pin_mux.h
firmware/tempsensor/freertos/: FreeRTOSConfig.h
firmware/tempsensor/source/: driver_adc.c  driver_adc.h  mcp9844.h  tempsensor.c
firmware/thermosthat/: .cproject  .project  CMakeLists.txt  thermosthat JLink Debug.launch  thermosthat.mex
firmware/thermosthat/board/: CMakeLists.txt  clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
firmware/thermosthat/openthread_freertos/: openthread_freertos.c
firmware/thermosthat/source/: CMakeLists.txt  gdb_config  thermosthat.c
frdm_board/FRDM-KW41Z_C2-DESIGNFILES/: .~lock.BOM-29102_C2.xlsx#  BOM-29102_C2.xlsx  CEN-29102_C1.smt  NET-29102_C1.net  ReadMe.rtf
frdm_board/FRDM-KW41Z_C2-DESIGNFILES/GRB-29102/: GBR-29102_C_FAB.art  GBR-29102_C_L1_TOP.art  GBR-29102_C_L2_GND.art  GBR-29102_C_L3_INT.art  GBR-29102_C_L4_BOTTOM.art  GBR-29102_C_PAS.art  GBR-29102_C_PSM.art  GBR-29102_C_PSP.art  GBR-29102_C_PSS.art  GBR-29102_C_SAS.art  GBR-29102_C_SSM.art  GBR-29102_C_SSP.art  GBR-29102_C_SSS.art  IPCD356.txt  ReadMe.txt  ncdrill-1-4.drl  ncroute.rou
tempsensor/: I2C.sch  MKW41_PERIPHERAL_PWR.sch  Mouser_BOM.xls  fp-info-cache  sym-lib-table  tempsensor-cache.lib  tempsensor-rescue.lib  tempsensor.csv  tempsensor.kicad_pcb  tempsensor.kicad_pcb-bak  tempsensor.pro  tempsensor.sch  tempsensor.xml
thermostat/: Mouser_BOM.xls  README  display.sch  fp-info-cache  gpio.sch  home-thermostat-cache.lib  home-thermostat-rescue.lib  home-thermostat.csv  home-thermostat.kicad_pcb  home-thermostat.kicad_pcb-bak  home-thermostat.pro  home-thermostat.sch  home-thermostat.xml  regulator_out.sch  sensors.sch  sym-lib-table
